# AI_Agent_LangGraph

./: .gitignore  README.md  pyproject.toml  requirements.txt
Part 1. AI 에이전트 기초 다지기/CH03.LLM 어플리케이션의 기본, RAG/: CH03.02.01.Langchain으로 구현하는 Basic RAG.ipynb  CH03.02.02.Langgraph로 구현하는 Basic RAG.ipynb  CH03.02.03.Karpathy_LLM_Wiki.ipynb
Part 2. AI 에이전트 초간단 구현해보기/CH04.프로덕션 수준의 프레임워크, Langgraph/: CH04._02.. AI 에이전트 프레임워크 Hard 버전 - Langgraph로 웹 검색 에이전트 구현 copy.ipynb
Part 3. 멀티 에이전트 구조 정복하기/CH02.Langgraph 기본 워크플로우 구현/: CH02._02._Prompt Chaining으로 더 똑똑한 답변 받기.ipynb  CH02._04._CodeAct 에이전트로 복잡한 문제 해결하기.ipynb  CH02._05._Orchestrator-Worker으로 AI 팀 만들어보기.ipynb  CH02._07._Routing으로 AI 시스템 효율 끌어올리기.ipynb
Part 3. 멀티 에이전트 구조 정복하기/CH03.Langgraph 통한 실제 AI 에이전트 서비스 따라하기/: CH03._02._DeepResearch 에이전트 구현하기.ipynb  CH03._04._DeepAgent의 To-do list 구현하기.ipynb  CH03._05._DeepAgent의 File Management 구현하기.ipynb  CH03._06._DeepAgent의 Sub-Agent 위임 구현하기.ipynb  CH03._07._DeepAgent 완전체 구현하기.ipynb  deepresearch_architecture.mmd
Part 3. 멀티 에이전트 구조 정복하기/CH04.Langgraph 기본 워크플로우 구현/: CH02._01._ReACT 기반의 Single Agent 구현하기.ipynb  CH02._03._MoA(Mixture of Agents)로 AI 답변 종합하기.ipynb  CH02._06._Evaluator-optimizer으로 자율 개선 만들기.ipynb
Part 3. 멀티 에이전트 구조 정복하기/부록. LangChain 및 LangGraph 1.0 기초/: 부록_01._LangChain과 LangGraph 소개.ipynb  부록_02._init_chat_model로 모델 초기화하기.ipynb  부록_03._Tool 데코레이터와 ToolRuntime.ipynb  부록_04._create_agent로 간단한 에이전트 만들기.ipynb  부록_05._StateGraph API로 커스텀 그래프 구축하기.ipynb  (+5 more)
사내교육_LLM_Langchain/: 1일차.ipynb  DB_SCHEMA.txt  SQL과ChatGPT.ipynb  db.py  날씨_챗봇.ipynb
주식_투자/: data.ipynb
(+13 files in other folders)
